command-macro-derive/tests/incorrect_package_attribute.stderr
warning: associated type `handleStream` should have an upper camel case name
   --> $DIR/cloudstate.eventsourced.rs:181:14
    |
181 |         type handleStream: Stream<Item = Result<super::EventSourcedStreamOut, tonic::Status>>
    |              ^^^^^^^^^^^^ help: convert the identifier to upper camel case: `HandleStream`
    |
    = note: `#[warn(non_camel_case_types)]` on by default

error: expected `=`
 --> $DIR/incorrect_package_attribute.rs:6:1
  |
6 | #[package("com.example.shoppingcart")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
